--- a/lbh-fss-public-frontend/package.json
+++ b/lbh-fss-public-frontend/package.json
@@ -19,25 +19,40 @@
     "mock-gen:services": "node ./scripts/generateMockServices.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-pro": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@reach/router": "^1.3.4",
+    "actionsheet-react": "^1.0.9",
     "axios": "^0.19.2",
+    "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "history": "^5.0.0",
     "http-proxy-middleware": "^1.0.5",
+    "leaflet": "^1.7.1",
+    "leaflet-gesture-handling": "^1.1.8",
     "lodash": "^4.17.20",
     "polished": "^3.6.5",
+    "postcode-validator": "^3.1.0",
     "prop-types": "^15.7.2",
+    "qs": "^6.9.4",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-accessible-accordion": "^3.3.3",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.1",
-    "react-share": "^4.2.1",
+    "react-leaflet": "^2.7.0",
+    "react-leaflet-markercluster": "^2.0.0",
+    "react-responsive": "^8.1.0",
+    "react-share": "^4.3.0",
     "react-to-print": "^2.10.0",
     "react-toastify": "^6.0.8",
     "styled-components": "^5.1.1",
     "styled-components-breakpoint": "^3.0.0-preview.20",
     "styled-components-modifiers": "^1.2.5",
     "styled-react-modal": "^2.0.1",
+    "url-search-params-polyfill": "^8.1.0",
     "use-query-params": "^1.1.6"
   },
   "browserslist": "> 1%,last 2 versions",
@@ -52,7 +67,6 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "connect-api-mocker": "^1.9.0",
-    "cors": "^2.8.5",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard-react": "^9.2.0",
